# compeito

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  cli.py  docker-compose.yml  pyproject.toml  tailwind.config.js
.claude/: settings.local.json
.claude/agents/: cli-agent.md  import-agent.md  infra-agent.md  schema-agent.md  test-agent.md  web-ui-agent.md
.claude/skills/: add-router.md  scaffold-resource.md  validate-case.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: admin-api.md  api-examples.md  api-spec.md  architecture.md  cli.md  csv-format.md  db-schema.md  functional-requirements.md  import-logic.md  non-functional-requirements.md  phases.md  web-ui.md
docs/dev/: backlog.md  case-v1p1-conformance-backlog.md  cli-command-redesign.md  conventions.md  local-setup.md  moodle-competency-export-design.md  round_trip_status.md
docs/guide/: deployment.md  initial-setup.md  opencase-interop.md
docs/reference/: case-v1p1-info-model.md  case-v1p1-rest-binding.md  imscasev1p1_openapi3_v1p0.json  opensalt-csv-format.md
docs/requirements/: functional-requirements.md  non-functional-requirements.md  phases.md
docs/spec/: api-examples.md  api-spec.md  architecture.md  case-overview.md  cli.md  csv-format.md  data-model-overview.md  db-schema.md  import-logic.md  round-trip-fidelity.md  web-ui.md
migrations/: env.py
migrations/versions/: 0054ee62f823_cf_rubric_criteria_cf_item_uri_source_.py  1dc700ad80d5_tenants_slug_column_url_friendly_alias.py  50f9646e2f71_cf_rubric_criteria_cf_item_id_fk_on_.py  5389de18d5e7_case_v1_1_notes_alternativelabel_.py  b19858da31b6_create_all_tables.py  bfbb97d3805a_cf_documents_cf_package_uri_source_列を追加_.py  c704faa62b4f_add_display_order_to_tenants_and_cf_.py  cb3b9a162d76_rubric_criterion_level_の_unique_.py  (+2 more)
seed/: 001.csv  001r.csv  seed.sh
src/: config.py  database.py  dependencies.py  errors.py  i18n.py  main.py
tests/: conftest.py  test_discovery.py  test_error_handling.py  test_health.py
(+105 files in other folders)
